Se arreglo el responsive del _contactos

--- a/contactos.html
+++ b/contactos.html
@@ -15,133 +15,139 @@
 </head>
 <body>       
     <!-- Secto NAV -->
-    <header class="header">    
-        <nav class="header__nav">
-            <div class="header__nav__div">
-                <a class="header__nav__div__a" href="index.html">
-                    <img class="header__nav__div__a__img" src="fotos/logo.png" alt="foto logo">
-                </a> 
-            </div>
-            <button class="header__nav__button" data-toggle="collapse" data-target="#navBar">
-                <span class="header__nav__button__span"></span>
-            </button>
-            <div class="header__nav__text" id="navBar">
-                <ul class="header__nav__text__ul">
-                    <li class="header__nav__text__ul__li">
-                        <a href="index.html" class="header__nav__text__ul__li__a">Inicio</a>
-                    </li>
-                    <li class="header__nav__text__ul__li">
-                        <a href="menu.html" class="header__nav__text__ul__li__a" id="navDropdown" role="button" data-toggle="dropdown">Menu</a>
-                        <div class="header__nav__text__ul__li__div dropdown-menu" aria-labelledby="navDropdown">
-                            <a href="menu.html#menuUno" class="header__nav__text__ul__li__div__a ">Menu Pizzas y Pastas </a>
-                            <div class=" dropdown-divider"></div>
-                            <a href="menu.html#menuDos" class="header__nav__text__ul__li__div__a">Menu Carne </a>
-                            <div class=" dropdown-divider"></div>
-                            <a href="menu.html#menuTres" class="header__nav__text__ul__li__div__a">Menu Cerdo </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="menu.html#menuCuatro" class="header__nav__text__ul__li__div__a">Menu Pollo </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="menu.html#menuCinco" class="header__nav__text__ul__li__div__a">Menu de Estacion</a>
-                            <div class="dropdown-divider"></div>
-                            <a href="menu.html#menuSeis" class="header__nav__text__ul__li__div__a ">Menu Saludable</a>
-                        </div>
-                    </li>
-                    <li class="header__nav__text__ul__li">
-                        <a href="" class="header__nav__text__ul__li__a " id="navDropdown" role="button" data-toggle="dropdown">Bebida</a>
-                        <div class="header__nav__text__ul__li__div dropdown-menu" aria-labelledby="navDropdown">
-                            <a href="bebidas.html#bebidaUno" class="header__nav__text__ul__li__div__a">Carta de Vinos</a>
-                            <div class="dropdown-divider"></div>
-                            <a href="bebidas.html#bebidaDos" class="header__nav__text__ul__li__div__a">Carta de Champagne</a>
-                            <div class="dropdown-divider"></div>
-                            <a href="bebidas.html#bebidaTres" class="header__nav__text__ul__li__div__a">Otros</a>
-                        </div>
+        <header class="header">    
+            <nav class="header__nav">
+                <div class="header__nav__div">
+                    <a class="header__nav__div__a" href="index.html">
+                        <img class="header__nav__div__a__img" src="fotos/logo.png" alt="foto logo">
+                    </a> 
+                </div>
+                <button class="header__nav__button" data-toggle="collapse" data-target="#navBar">
+                    <span class="header__nav__button__span"></span>
+                </button>
+                <div class="header__nav__text" id="navBar">
+                    <ul class="header__nav__text__ul">
+                        <li class="header__nav__text__ul__li">
+                            <a href="index.html" class="header__nav__text__ul__li__a">Inicio</a>
                         </li>
                         <li class="header__nav__text__ul__li">
-                            <a href="nosotros.html" class="header__nav__text__ul__li__a navbar-link text-decoration-none">Nosotros</a>
+                            <a href="menu.html" class="header__nav__text__ul__li__a" id="navDropdown" role="button" data-toggle="dropdown">Menu</a>
+                            <div class="header__nav__text__ul__li__div dropdown-menu" aria-labelledby="navDropdown">
+                                <a href="menu.html#menuUno" class="header__nav__text__ul__li__div__a ">Menu Pizzas y Pastas </a>
+                                <div class=" dropdown-divider"></div>
+                                <a href="menu.html#menuDos" class="header__nav__text__ul__li__div__a">Menu Carne </a>
+                                <div class=" dropdown-divider"></div>
+                                <a href="menu.html#menuTres" class="header__nav__text__ul__li__div__a">Menu Cerdo </a>
+                                <div class="dropdown-divider"></div>
+                                <a href="menu.html#menuCuatro" class="header__nav__text__ul__li__div__a">Menu Pollo </a>
+                                <div class="dropdown-divider"></div>
+                                <a href="menu.html#menuCinco" class="header__nav__text__ul__li__div__a">Menu de Estacion</a>
+                                <div class="dropdown-divider"></div>
+                                <a href="menu.html#menuSeis" class="header__nav__text__ul__li__div__a ">Menu Saludable</a>
+                            </div>
                         </li>
                         <li class="header__nav__text__ul__li">
-                            <a href="contactos.html" class="header__nav__text__ul__li__a navbar-link text-decoration-none">Contactos</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="header__nav__redes">
-                        <a href="">
-                            <img class="header__nav__redes__img" src="fotos/shopping.png" alt="Logo Shopping">
-                        </a>
-                        <a href="http://wa.me/5491158301557">
-                            <img class="header__nav__redes__img" src="fotos/whatsapp1.png" alt="Logo WhatsApss">
-                        </a>
-                        <a href="https://www.facebook.com/briefcatering/">
-                            <img class="header__nav__redes__img" src="fotos/facebook2.png" alt="Logo Facebook">
-                        </a>
-                        <a href="https://www.instagram.com/briefcatering/">
-                            <img class="header__nav__redes__img" src="fotos/instagram2.png" alt="Logo Facebook">
-                        </a>
-                </div>
-        </nav>
-    </header>   
+                            <a href="" class="header__nav__text__ul__li__a " id="navDropdown" role="button" data-toggle="dropdown">Bebida</a>
+                            <div class="header__nav__text__ul__li__div dropdown-menu" aria-labelledby="navDropdown">
+                                <a href="bebidas.html#bebidaUno" class="header__nav__text__ul__li__div__a">Carta de Vinos</a>
+                                <div class="dropdown-divider"></div>
+                                <a href="bebidas.html#bebidaDos" class="header__nav__text__ul__li__div__a">Carta de Champagne</a>
+                                <div class="dropdown-divider"></div>
+                                <a href="bebidas.html#bebidaTres" class="header__nav__text__ul__li__div__a">Otros</a>
+                            </div>
+                            </li>
+                            <li class="header__nav__text__ul__li">
+                                <a href="nosotros.html" class="header__nav__text__ul__li__a navbar-link text-decoration-none">Nosotros</a>
+                            </li>
+                            <li class="header__nav__text__ul__li">
+                                <a href="contactos.html" class="header__nav__text__ul__li__a navbar-link text-decoration-none">Contactos</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header__nav__redes">
+                            <a href="">
+                                <img class="header__nav__redes__img" src="fotos/shopping.png" alt="Logo Shopping">
+                            </a>
+                            <a href="http://wa.me/5491158301557">
+                                <img class="header__nav__redes__img" src="fotos/whatsapp1.png" alt="Logo WhatsApss">
+                            </a>
+                            <a href="https://www.facebook.com/briefcatering/">
+                                <img class="header__nav__redes__img" src="fotos/facebook2.png" alt="Logo Facebook">
+                            </a>
+                            <a href="https://www.instagram.com/briefcatering/">
+                                <img class="header__nav__redes__img" src="fotos/instagram2.png" alt="Logo Facebook">
+                            </a>
+                    </div>
+            </nav>
+        </header>
         <section class="sectionC">
             <article class="sectionC__article">
-                <div id="carouselExampleInterval" class="sectionC__article__div carousel slide carousel-fade" data-ride="carousel">
-                    <div class="sectionC__article__div carousel-inner">
-                        <div class="sectionC__article__div__div carousel-item active" data-interval="500">
-                            <img src="fotos/carrucel2/a.jpg" class="d-block w-100" alt="1">
+                <div id="carouselExampleIndicators" class="sectionC__article__div carousel slide" data-ride="carousel">
+                    <ol class="sectionC__article__div__ol carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6" ></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                    </ol>
+                    <div class="sectionC__article__div__div carousel-inner">
+                        <div class="sectionC__article__div__div__div carousel-item active" data-interval="500">
+                            <img class="d-block w-100" src="fotos/carrucel2/a.jpg" alt="First slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/b.jpg" class="d-block w-100" alt="2">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/b.jpg" alt="Second slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/c.jpg" class="d-block w-100" alt="3">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/c.jpg" alt="Third slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/d.jpg" class="d-block w-100" alt="...">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/d.jpg" alt=" slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/e.jpg" class="d-block w-100" alt="...">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/f.jpg" alt="Second slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/f.jpg" class="d-block w-100" alt="...">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/g.jpg" alt="Third slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/g.jpg" class="d-block w-100" alt="...">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/h.jpg" alt="Second slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/h.jpg" class="d-block w-100" alt="...">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/i.jpg" alt="Third slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/i.jpg" class="d-block w-100" alt="...">
+                        <div class="sectionC__article__div__div__div  carousel-item" data-interval="3000">
+                            <img class="d-block w-100" src="fotos/carrucel2/j.jpg" alt="First slide">
                         </div>
-                        <div class="sectionC__article__div__div carousel-item" data-interval="3000">
-                            <img src="fotos/carrucel2/j.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
                     </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-            </article>
-            <article class="sectionC__consulta">
-                <form class="sectionC__consulta__form">
-                    <h2 class=" sectionC__consulta__form__h2 display-3">CONTACTOS</h2>
-                    <div class="sectionC__consulta__form__div form-group">
-                        <label class="sectionC__consulta__form__div__label" for="">Nombre</label>
+                <form class="sectionC__article__form">
+                    <h2 class=" sectionC__article__form__h2">CONTACTOS</h2>
+                    <div class="sectionC__article__form__div form-group">
+                        <label class="sectionC__article__form__div__label" for="">Nombre</label>
                         <input type="text" class="form-control" id="formGroupExampleInput1" placeholder="Nombre">
                     </div>
-                    <div class="sectionC__consulta__form__div form-group">
-                        <label class="sectionC__consulta__form__div__label" for="formGroupExampleInput2">Apellido</label>
+                    <div class="sectionC__article__form__div form-group">
+                        <label class="sectionC__article__form__div__label" for="formGroupExampleInput2">Apellido</label>
                         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Apellidor">
                     </div>
-                    <div class="sectionC__consulta__form__div form-group ">
-                        <label class="sectionC__consulta__form__div__label" for="formGroupExampleInput3">Mail</label>
+                    <div class="sectionC__article__form__div form-group ">
+                        <label class="sectionC__article__form__div__label" for="formGroupExampleInput3">Mail</label>
                         <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="mail@.com">
                     </div>
-                    <div class="sectionC__consulta__form__div form-group ">
-                        <label class="sectionC__consulta__form__div__label" for="inputState">Opciones</label>
+                    <div class="sectionC__article__form__div form-group ">
+                        <label class="sectionC__article__form__div__label" for="inputState">Opciones</label>
                         <select id="inputState" class="sectionC__consulta__form__div__label__select form-control" >
                             <option selected>Opciones</option>
                             <option >Infomracion de mi Pedido</option>
@@ -151,7 +157,7 @@
                             <option >Reclamos de mi Pedido</option>
                         </select>
                     </div>
-                    <textarea class="form-control" id="validationTextarea" placeholder="Required example textarea" required></textarea>
+                    <textarea class="form-control" id="validationTextarea" placeholder="Deje su mensaje...." required></textarea>
                     <div class="sectionC__consulta__form__btn d-flex justify-content-center">
                         <a href="#" class=" w-25 btn btn-primary">Enviar</a>
                     </div>
