Se arreglo cosas de la parte de contactos

--- a/contactos.html
+++ b/contactos.html
@@ -148,7 +148,7 @@
                     </div>
                     <div class="sectionC__article__form__div form-group ">
                         <label class="sectionC__article__form__div__label" for="inputState">Opciones</label>
-                        <select id="inputState" class="sectionC__consulta__form__div__label__select form-control" >
+                        <select id="inputState" class="form-control" >
                             <option selected>Opciones</option>
                             <option >Infomracion de mi Pedido</option>
                             <option>Cambio de Domicilio</option>
@@ -197,7 +197,6 @@
                     </p>
                 </div>
             </article>
-            
             <article class="footer__section__article">
                 <h2  class="footer__section__article__h2">PLATOS EN 15 MIN</h2>
                 <div class="footer__section__article__texto">
