Se agrego el desplegable con las preguntas frecuentes

--- a/index.html
+++ b/index.html
@@ -86,6 +86,41 @@
         <section class="index">
             <video class="index__video"  src="videos/video-index.mp4" autoplay muted controls loop></video>          
         </section>
+    <!-- SECTOR PREGUNTAS  -->
+        <div class="accordion container p-0" id="accordionExample">
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <button class=" btn btn-link btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <h2>PREGUNTAS FRECUENTES</h2> 
+                    </button>
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <h4>PREGUNTAS FRECUNTES</h4>
+                        <h5>Que dias hacen los envios?</h5>
+                        <p> Los envios ser realizan durante los dias viernes de 10 hrs a 16 hrs en Capital y de 16 hrs 21 hrs en Zona Norte </p>
+                        <h5>Cuanto es el pedido minimo que se tiene que hacer?</h5>
+                        <p>El pedido minimo es de 4 unidades, que equivale a una caja</p>
+                        <h5>Como son los medio de pago?</h5>
+                        <p>Disponemos de los siguientes medios de pago:</p>
+                        <p>En efectivo : Al momento de recibir el pedido.</p>
+                        <p>Deposito o transferencia bancaria.</p>   
+                        <h5>Tiene menu sin TAG?</h5>
+                        <p>Dentro de nuestro ampliio menus se encuentra marcado cual son sin TAG</p>
+                        <h5>Cuanto tiempo tengo que espera para sacarlo de la olla</h5>
+                        <p>Aproximadamente 15 minutos cada plato viene con su instruccion en la bolasa de que tiempo se recomienda</p>
+                        <h5>Como se tiene que hacer para cocinarlo</h5>
+                        <ol> Para concinar los distintos productos se tiene que realizar lo siguiente:
+                            <li>Poner agua sobre la olla</li>
+                            <li>Esperar que hierva el agua</li>
+                            <li>Introducir la bolsa dentro de la olla</li>
+                            <li>Dejar que pase el tiempo indicado en la bolsa</li>
+                            <li>Retirar el produto, sacarlo de la bola y listo</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
     <!-- SECTOR CARRUSEL  -->
         <section class="carrusel">
             <article class="carrusel__article">
