Se modifico para que cuando se abra no aparezca el desplegable abierto

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <h2>PREGUNTAS FRECUENTES</h2> 
                     </button>
                 </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="card-body">
                         <h4>PREGUNTAS FRECUNTES</h4>
                         <h5>Que dias hacen los envios?</h5>
