Se agrego la posibilidad de poder comprar con el desplegable

--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
                 </div>
             </div>
         </div>
+        <div class="accordion container p-0" id="accordionExample">
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <button class="btn btn-link btn-block text-center collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <h2>REALIZAR LA COMPRA</h2>
+                    </button>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <iframe frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/patriciosandor/form/BriefenCasa/formperma/biLDS-geifNoPHKPMtsDdClh_cOswTe-mJYkM7sXrQY'></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
     <!-- SECTOR CARRUSEL  -->
         <section class="carrusel">
             <article class="carrusel__article">
