Se agrego el boton

--- a/index.html
+++ b/index.html
@@ -121,15 +121,22 @@
                 </div>
             </div>
         </div>
-        <div class="accordion container p-0" id="accordionExample">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <button class="btn btn-link btn-block text-center collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <h2>REALIZAR LA COMPRA</h2>
-                    </button>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body">
+    <!-- SECTOR FORM -->
+        <div class="div container p-0">
+            <button type="button" class="div__button btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                CLICK PARA COMPRAR!!!!!
+            </button>
+        </div>
+        <div class="cuadrado modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="cuadrado__div modal-dialog">
+                <div class="cuadrado__div__div modal-content">
+                    <div class="cuadrado__div__div__div modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="form-zoho modal-body">
                         <iframe frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/patriciosandor/form/BriefenCasa/formperma/biLDS-geifNoPHKPMtsDdClh_cOswTe-mJYkM7sXrQY'></iframe>
                     </div>
                 </div>
