Se paso todo lo de boot a @extend del la parte del acordeon

--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
             <video class="index__video"  src="videos/video-index.mp4" autoplay muted controls loop></video>          
         </section>
     <!-- SECTOR PREGUNTAS  -->
-        <div class="accordion container p-0" id="accordionExample">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <button class=" btn btn-link btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <div class="preguntas" id="accordionExample">
+            <div class="preguntas__titulo">
+                <div class="preguntas__titulo__div" id="headingOne">
+                    <button class="preguntas__titulo__div__button" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         <h2>PREGUNTAS FRECUENTES</h2> 
                     </button>
                 </div>
-                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                    <div class="card-body">
+                <div id="collapseOne" class="preguntas__titulo__collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="preguntas__titulo__collapse__div">
                         <h4>PREGUNTAS FRECUNTES</h4>
                         <h5>Que dias hacen los envios?</h5>
                         <p> Los envios ser realizan durante los dias viernes de 10 hrs a 16 hrs en Capital y de 16 hrs 21 hrs en Zona Norte </p>
@@ -128,7 +128,7 @@
             </button>
         </div>
         <div class="cuadrado modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="cuadrado__div modal-dialog">
+            <div class="cuadrado__div modal-dialog modal-dialog-centered">
                 <div class="cuadrado__div__div modal-content">
                     <div class="cuadrado__div__div__div modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
