Se modifico el amaño del button y se le dio estilo

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             </div>
         </div>
     <!-- SECTOR FORM -->
-        <div class="div container p-0">
-            <button type="button" class="div__button btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        <div class="botocompra">
+            <button type="button" class="botocompra__button" data-toggle="modal" data-target="#exampleModal">
                 CLICK PARA COMPRAR!!!!!
             </button>
         </div>
