Se le dio estilo al formulario y a su vez se le coloco el icono de NO TACC en el menu

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
         <section class="index">
             <video class="index__video"  src="videos/video-index.mp4" autoplay muted controls loop></video>          
         </section>
-    <!-- SECTOR PREGUNTAS  -->
+    <!-- SECTOR ACORDION  -->
         <div class="preguntas" id="accordionExample">
             <div class="preguntas__titulo">
                 <div class="preguntas__titulo__div" id="headingOne">
-                    <button class="preguntas__titulo__div__button" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="preguntas__titulo__div__button text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         <h2>PREGUNTAS FRECUENTES</h2> 
                     </button>
                 </div>
@@ -106,16 +106,17 @@
                         <p>En efectivo : Al momento de recibir el pedido.</p>
                         <p>Deposito o transferencia bancaria.</p>   
                         <h5>Tiene menu sin TAG?</h5>
-                        <p>Dentro de nuestro ampliio menus se encuentra marcado cual son sin TAG</p>
+                        <p>Dentro de nuestro ampliio menus se encuentra marcado cual son sin TACC</p>
                         <h5>Cuanto tiempo tengo que espera para sacarlo de la olla</h5>
                         <p>Aproximadamente 15 minutos cada plato viene con su instruccion en la bolasa de que tiempo se recomienda</p>
                         <h5>Como se tiene que hacer para cocinarlo</h5>
-                        <ol> Para concinar los distintos productos se tiene que realizar lo siguiente:
-                            <li>Poner agua sobre la olla</li>
-                            <li>Esperar que hierva el agua</li>
-                            <li>Introducir la bolsa dentro de la olla</li>
-                            <li>Dejar que pase el tiempo indicado en la bolsa</li>
-                            <li>Retirar el produto, sacarlo de la bola y listo</li>
+                        <ol> 
+                            <p id="p-especial">Para concinar los distintos productos se tiene que realizar lo siguiente:</p>
+                            <li>Poner agua sobre la olla.</li>
+                            <li>Esperar que hierva el agua.</li>
+                            <li>Introducir la bolsa dentro de la olla.</li>
+                            <li>Dejar que pase el tiempo indicado en la bolsa.</li>
+                            <li>Retirar el produto, sacarlo de la bola y listo.</li>
                         </ol>
                     </div>
                 </div>
@@ -128,15 +129,15 @@
             </button>
         </div>
         <div class="cuadrado modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="cuadrado__div modal-dialog modal-dialog-centered">
+            <div class="cuadrado__div modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
                 <div class="cuadrado__div__div modal-content">
                     <div class="cuadrado__div__div__div modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">BRIEF Catering</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="form-zoho modal-body">
+                    <div class="cuadrado__div__div__divInf form-zoho modal-body">
                         <iframe frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/patriciosandor/form/BriefenCasa/formperma/biLDS-geifNoPHKPMtsDdClh_cOswTe-mJYkM7sXrQY'></iframe>
                     </div>
                 </div>
