--- a/menu.html
+++ b/menu.html
@@ -204,6 +204,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$370-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -218,6 +219,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$390-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -232,6 +234,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$360-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -268,6 +271,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$450-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -282,6 +286,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$490-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -300,7 +305,7 @@
                             <img src="fotos/Platos/menu4plato1.jpg" alt="...">
                         </div>
                         <div class="sectionM__article__div__div__div__div-texto-m">
-                            <h2 class="sectionM__article__div__div__div__div-texto-m__h2">BASTONES DE POLLO REBOZADOS CON SALSA BBQ X 6un</h2>
+                            <h2 class="sectionM__article__div__div__div__div-texto-m__h2">BASTONES DE POLLO C/ SALSA BBQ X 6un</h2>
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$250-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
@@ -332,6 +337,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$300-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -354,6 +360,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$350-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -446,6 +453,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$320-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -460,6 +468,7 @@
                             <p class="sectionM__article__div__div__div__div-texto-m__p">-$350-</p>
                             <div class="sectionM__article__div__div__div__div-texto-m__div">
                                 <a href="#">QUIERO!!!!</a>
+                                <img src="fotos/Platos/tacc.jpg" alt="">
                             </div>
                         </div>
                     </div>
